--- a/MayoChat/app/src/main/res/layout/activity_chat.xml
+++ b/MayoChat/app/src/main/res/layout/activity_chat.xml
@@ -35,12 +35,12 @@
         android:orientation="horizontal"
         >
 
-
+        <!-- android:src should be send_file instead of send_message -->
         <ImageButton
             android:id="@+id/send_files_btn"
             android:layout_width="60dp"
             android:layout_height="50dp"
-            android:src="@drawable/send_files"
+            android:src="@drawable/send_message"
             android:layout_alignParentStart="true"
             android:backgroundTint="@android:color/white"
             />
