--- a/MayoChat/app/src/main/res/layout/custom_messages_layout.xml
+++ b/MayoChat/app/src/main/res/layout/custom_messages_layout.xml
@@ -12,6 +12,7 @@
         android:src="@drawable/profile_image"
         />
 
+    <!-- android:background should be @drawable/receiver_message_layout -->
     <TextView
         android:id="@+id/receiver_message_text"
         android:layout_width="wrap_content"
@@ -20,7 +21,6 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="3dp"
         android:layout_toEndOf="@+id/message_profile_image"
-        android:background="@drawable/receiver_messages_layout"
         android:text="receiver messages here"
         android:padding="10dp"
         android:textSize="14sp"
@@ -48,6 +48,7 @@
         />
 
 
+    <!-- android:background should be @drawable/receiver_messages_layout -->
     <TextView
         android:id="@+id/sender_messsage_text"
         android:layout_width="wrap_content"
@@ -55,7 +56,6 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
         android:layout_alignParentTop="@+id/receiver_message_text"
-        android:background="@drawable/sender_messages_layout"
         android:text="sender messages"
         android:textSize="14sp"
         android:padding="10dp"
