--- a/MayoChat/app/src/main/res/layout/fragment_requests.xml
+++ b/MayoChat/app/src/main/res/layout/fragment_requests.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RequestsFragment">
+    tools:context=".RequestFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
